--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,7 +1,100 @@
-<p>Welcome <%= @email %>!</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <style>
+      /* Email styles need to be inline */
+      html {
+          font-family: Roboto, sans-serif;
+          background-color: #f5f5f5;
+          -ms-text-size-adjust: 100%;
+          -webkit-text-size-adjust: 100%;
+          height: 100%;
+          width: 100%;
+          max-height: 100%;
+          max-width: 100%;
+      }
 
-<p>You can confirm your account email through the link below:</p>
+      body {
+          height: 100%;
+          width: 100%;
+          margin: 0;
+          display: flex;
+          flex-direction: column;
 
-<p><%= link_to 'Confirm my Account', confirmation_url(@resource, confirmation_token: @token) %></p>
---------------------
-<p><%= link_to 'Bestätigen', `https://app.frienradar.com/additional-login-data?token=#{@token}` %></p>
+          justify-content: center;
+          align-items: center;
+      }
+
+      h1 {
+          font-size: 30px;
+          margin: 0;
+          padding: 0;
+      }
+
+      .wrapper {
+          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+          background-color: #ffffff;
+          transition: 0.3s;
+          border-radius: 20px; /* 5px rounded corners */
+          padding: 40px;
+
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+
+      }
+
+      img {
+          margin-bottom: 20px;
+          max-width: 150px;
+      }
+
+      a {
+          background-color: #1b1b1d;
+          border-radius: 8px;
+          border-style: none;
+          box-sizing: border-box;
+          color: #FFFFFF;
+          cursor: pointer;
+          display: inline-block;
+          font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+          font-size: 14px;
+          font-weight: 500;
+          height: 40px;
+          line-height: 20px;
+          list-style: none;
+          margin: 0;
+          outline: none;
+          padding: 10px 16px;
+          position: relative;
+          text-align: center;
+          text-decoration: none;
+          transition: color 100ms;
+          vertical-align: baseline;
+          user-select: none;
+          -webkit-user-select: none;
+          touch-action: manipulation;
+      }
+
+      a:hover,
+      a:focus {
+          background-color: rgba(27, 27, 29, 0.46);
+      }
+
+  </style>
+</head>
+
+<body>
+<div class="wrapper">
+  <img src="<%= root_url %>/assets/images/logo.png">
+
+  <h1>Welcome <%= @resource.name %>!</h1>
+
+  <p>You can confirm your account email through the link below:</p>
+
+  <%= link_to 'Confirm my Account', confirmation_url(@token) %>
+</div>
+</body>
+</html>
