--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <style>
-      /* Email styles need to be inline */
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <style type="text/css">
+      body{width:100% !important; -webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; margin:0; padding:0;}
+
       html {
           font-family: Roboto, sans-serif;
           background-color: #f5f5f5;
@@ -18,6 +20,7 @@
       body {
           height: 100%;
           width: 100%;
+          max-height: 600px;
           margin: 0;
           display: flex;
           flex-direction: column;
@@ -38,12 +41,12 @@
           transition: 0.3s;
           border-radius: 20px; /* 5px rounded corners */
           padding: 40px;
+          margin: 40px;
 
           display: flex;
           flex-direction: column;
           justify-content: center;
           align-items: center;
-
       }
 
       img {
@@ -82,10 +85,8 @@
       a:focus {
           background-color: rgba(27, 27, 29, 0.46);
       }
-
   </style>
 </head>
-
 <body>
 <div class="wrapper">
   <img src="<%= root_url %>/assets/images/logo.png">
