--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -89,7 +89,7 @@
 </head>
 <body>
 <div class="wrapper">
-  <img src="<%= root_url %>/assets/images/logo.png">
+  <img src="<%= root_url %>assets/images/logo.png">
 
   <h1>Welcome <%= @resource.name %>!</h1>
 
